# adr-tools

./: Cargo.toml  README.md  docker-compose.yml
doc/adr/: 0001-use-tech1.md  0002-use-tech2.md  0003-use-tech2b.md
src/: ingest.rs  main.rs  types.rs
