[package]
name = "adr-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }
chrono = "0.4.23"
serde = "1.0.151"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros"] }
log = "0.4.17"
glob = "0.3.0"
#env_logger = "0.10.0"